<resources>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="The_day_before_yesterday">前天</string>
    <string name="Days_ago">天前</string>
    <string name="long_long_ago">很久以前</string>
    <string name="An_hour_ago">小时前</string>
    <string name="minutes_ago">分钟前</string>
    <string name="just">刚刚</string>
    <string name="day">日</string>
    <string name="month">月</string>
    <string name="app_name">练琴帮</string>
    <string name="picture">相册</string>
    <string name="camera">拍摄</string>
    <string name="videoCall">视频通话</string>
    <string name="voiceCall">语音通话</string>
    <string name="Chat">聊天</string>
    <string name="ChatVoice">语音</string>
    <string name="ChatPicture">图片</string>
    <string name="ChatVideo">视频</string>
    <string name="Rat">鼠</string>
    <string name="OX">牛</string>
    <string name="Tiger">虎</string>
    <string name="Rabbit">兔</string>
    <string name="Dragon">龙</string>
    <string name="Snake">蛇</string>
    <string name="Horse">马</string>
    <string name="Sheep">羊</string>
    <string name="Monkey">猴</string>
    <string name="Rooster">鸡</string>
    <string name="Dog">狗</string>
    <string name="Pig">猪</string>
    <string name="Capricorn">魔羯座</string>
    <string name="Aquarius">水瓶座</string>
    <string name="Pisces">双鱼座</string>
    <string name="Aries">白羊座</string>
    <string name="Taurus">金牛座</string>
    <string name="Gemini">双子座</string>
    <string name="Cancer">巨蟹座</string>
    <string name="Leo">狮子座</string>
    <string name="Virgo">处女座</string>
    <string name="Libra">天秤座</string>
    <string name="Scorpio">天蝎座</string>
    <string name="Sagittarius">射手座</string>
    <string name="Messages">消息</string>
    <string name="Contacts">好友</string>
    <string name="Discover">发现</string>
    <string name="Me">我的</string>
    <string name="Login">登录</string>
    <string name="LoginRegister">登录/注册</string>
    <string name="EnterPhoneNumber">输入手机号</string>
    <string name="ForgotPassword">忘记密码</string>
    <string name="Account">账号登录</string>
    <string name="LoginSuccessful">登录成功</string>
    <string name="CurrentLocation">选择国家和地区</string>
    <string name="SearchRegions">搜索国家</string>
    <string name="Register">注册</string>
    <string name="TwoMoreSteps">只剩两步</string>
    <string name="WhatIsYourGender">您是男生还是女生</string>
    <string name="registrationCompleted">注册完成后性别将不可修改：</string>
    <string name="Man">男生</string>
    <string name="Woman">女生</string>
    <string name="DayOfBirth">选择你的破壳日（>18岁）</string>
    <string name="yearsOld">岁</string>
    <string name="LastStep">只剩一步</string>
    <string name="CompleteInfo">完善资料</string>
    <string name="AddProfilePhoto">点击添加头像</string>
    <string name="UploadPicture">上传清晰的五官头像，让更多用户发现你</string>
    <string name="LikesJiu">99+喜欢</string>
    <string name="LikesYi">1人喜欢</string>
    <string name="LikesLing">0人喜欢</string>
    <string name="NickName">设置昵称</string>
    <string name="PasswordSetting">设置密码（6位以上）</string>
    <string name="Done">完成注册</string>
    <string name="Search">搜索</string>
    <string name="AddFriend">添加好友</string>
    <string name="Forward">转发</string>
    <string name="Withdrawal">撤回</string>
    <string name="SureToDelete">确定删除吗?</string>
    <string name="SaveTimeLine">检测到您有编辑的信息，是否保存为草稿？</string>
    <string name="Keywords">关键字</string>
    <string name="NewGroupChat">发起群聊</string>
    <string name="AddContacts">添加好友</string>
    <string name="Scan">扫一扫</string>
    <string name="MoreGroupChat">更多群聊</string>
    <string name="MoreChatHistories">更多聊天记录</string>
    <string name="SelectFriends">选择好友</string>
    <string name="SelectGroup">选择一个群</string>
    <string name="SelectChat">选择一个聊天</string>
    <string name="Successfully">创建成功</string>
    <string name="GroupNumber">群号码：</string>
    <string name="CopyGroupNumber">复制群号码</string>
    <string name="JoinGroupChat">加入</string>
    <string name="MyID">我的ID号：</string>
    <string name="ScanQR">扫一扫上面的二维码，加我好友</string>
    <string name="UserNotFound">该用户不存在</string>
    <string name="DescribeMind">请输入个性签名</string>
    <string name="Bio">个性签名</string>
    <string name="BioV">个性签名：</string>
    <string name="Alias">设置备注</string>
    <string name="Profile">主页</string>
    <string name="MessageSend">发消息</string>
    <string name="TagsV">个性标签：</string>
    <string name="Movies">电影：</string>
    <string name="Music">音乐：</string>
    <string name="Comic">动漫：</string>
    <string name="Foodie">美食：</string>
    <string name="Sports">运动：</string>
    <string name="SendFriendRequest">你需要发送验证申请，等待对方通过</string>
    <string name="EditContact">为朋友设置备注</string>
    <string name="UserRemark">请输入好友备注名称</string>
    <string name="Send">发送</string>
    <string name="HoldToTalk">按住说话</string>
    <string name="ReleaseToSend">松开手指，结束并发送</string>
    <string name="ReleaseToCancel">松开手指，取消发送</string>
    <string name="GroupSettings">群设置</string>
    <string name="GroupName">群聊名称</string>
    <string name="MyAliasInGroup">我在本群昵称</string>
    <string name="GroupQRCode">群二维码</string>
    <string name="GroupNotice">群公告</string>
    <string name="GroupChatType">群聊类型</string>
    <string name="GroupChatTypePrivate">私有</string>
    <string name="GroupChatTypePublic">公开</string>
    <string name="StickyOnTop">聊天置顶</string>
    <string name="MuteNotifications">消息免打扰</string>
    <string name="ClearChatHistory">清空聊天记录</string>
    <string name="AllMembersMute">全员禁言</string>
    <string name="AllMembersUnmute">全员解禁</string>
    <string name="RestrictMember">指定成员禁言</string>
    <string name="GroupAdmin">设置管理员</string>
    <string name="DeleteAndLeave">删除并退出群聊</string>
    <string name="DeleteGroup">解散群聊</string>
    <string name="GroupAdminMembers">群管理员</string>
    <string name="GroupAdminPermissions">群管理员可以拥有以下能力：\n1. 可以修改群名称\n2. 发表群公告\n3. 移除群成员</string>
    <string name="ChatSetting">聊天设置</string>
    <string name="GroupMembers">聊天成员</string>
    <string name="RemoveMembers">删除</string>
    <string name="Edit">编辑</string>
    <string name="EditTheGroupNotice">请编辑群公告</string>
    <string name="NewContacts">新的朋友</string>
    <string name="BlockList">黑名单</string>
    <string name="Remark">备注</string>
    <string name="Delete">删除</string>
    <string name="MobileID">手机号/ID</string>
    <string name="GoConfirm">接受</string>
    <string name="ConfirmFriendRequest">已添加</string>
    <string name="Message">他的留言</string>
    <string name="AddToContacts">添加为好友</string>
    <string name="Remove">移除</string>
    <string name="GroupChat">群聊</string>
    <string name="myGroupChat">我的群组</string>
    <string name="Group">群组</string>
    <string name="CreateGroupChat">创建群聊</string>
    <string name="RecommendedGroup">为你推荐</string>
    <string name="ChatHistory">聊天记录</string>
    <string name="More">更多</string>
    <string name="AllGood">都行</string>
    <string name="contactPerson">联系人</string>
    <string name="Match">匹配</string>
    <string name="SuperLike">超喜欢我：</string>
    <string name="LikesLeft">剩余%s次喜欢</string>
    <string name="wantToLocation">请输入您想找的地址</string>
    <string name="ChaZhao">查找</string>
    <string name="SearchRange">查找范围(公里)</string>
    <string name="Range">公里</string>
    <string name="Unlimited">不限</string>
    <string name="Gender">性别</string>
    <string name="ExclusiveForVIP">VIP会员专属</string>
    <string name="Age">年龄</string>
    <string name="GenderAge">性别/年龄</string>
    <string name="Alternative">另类</string>
    <string name="SuperLikesyou">超级喜欢你</string>
    <string name="PeopleNearby">正在查找附近的人</string>
    <string name="LikesSent">你的喜欢已经发送给TA了</string>
    <string name="reply">耐心等待TA的回复吧</string>
    <string name="NoMoreReminders">不再提醒</string>
    <string name="gotIt">知道了</string>
    <string name="SuperLikes">超级喜欢</string>
    <string name="OnlyLeftLikes">还剩%s次</string>
    <string name="SeeHowToDeal">查看规则</string>
    <string name="SendPrivateMessage">您可对TA发出专属私信哦！</string>
    <string name="Greetings">打招呼</string>
    <string name="ItMATCH">相互喜欢了对方</string>
    <string name="ChatNow">立刻去聊</string>
    <string name="Back">返回</string>
    <string name="Comment">发表你的看法...</string>
    <string name="NoPostsYet">你的好友暂未发布任何动态</string>
    <string name="Posts">动态</string>
    <string name="CreatePost">发布动态</string>
    <string name="Subject">输入标题</string>
    <string name="WhatsOnYourMind">说你所想...</string>
    <string name="WhoCanSeeYourPost">发布范围</string>
    <string name="FindPlacesNearYou">所在位置</string>
    <string name="Tags">关联标签</string>
    <string name="Post">发布</string>
    <string name="Public">公开</string>
    <string name="Private">仅自己可见</string>
    <string name="SaySomething">说点什么...</string>
    <string name="writeBack">回复</string>
    <string name="AllWriteBack">全部回复</string>
    <string name="writeBackHint">回复一下</string>
    <string name="PhotosOfYou">真实头像</string>
    <string name="Likes">喜欢</string>
    <string name="GetMembershipPlan">开通特权</string>
    <string name="Contents">内容</string>
    <string name="Favorites">收藏</string>
    <string name="praise">赞过</string>
    <string name="MyPosts">我发布的</string>
    <string name="Drafts">本地草稿</string>
    <string name="SetBackground">设置背景图</string>
    <string name="BecomeAMember">成为会员</string>
    <string name="BasicInformation">基础信息</string>
    <string name="MembershipPlan">我的会员</string>
    <string name="MembershipExpired">到期</string>
    <string name="MakePayment">立即续费</string>
    <string name="PaymentHistory">购买记录</string>
    <string name="MonthlyPlan">购买年限</string>
    <string name="Monthly">月</string>
    <string name="MonthlyPlanOne">1个月</string>
    <string name="MonthlyPlanSix">6个月</string>
    <string name="MonthlyPlanTwelve">12个月</string>
    <string name="AgreeVIPService">点击购买即表示您同意</string>
    <string name="VIPService">《会员服务协议》</string>
    <string name="Commented">评论</string>
    <string name="CommentedHint">评论一下～</string>
    <string name="LikeYourPosts">获赞</string>
    <string name="MatchNotification">匹配消息</string>
    <string name="SystemNotification">系统消息</string>
    <string name="Information">消息详情</string>
    <string name="Comments">评论我的</string>
    <string name="MySent">我发出的</string>
    <string name="MyReceived">我收到的</string>
    <string name="PraiseOfHarvest">收获的赞</string>
    <string name="EditProfile">编辑资料</string>
    <string name="ConstellationZodiac">星座/属相</string>
    <string name="UserNickName">昵称</string>
    <string name="Birth">出生日期</string>
    <string name="Region">国家地区</string>
    <string name="Setting">请设置</string>
    <string name="Set">已设置</string>
    <string name="SexualOrientation">社交属性</string>
    <string name="Passions">兴趣爱好</string>
    <string name="Relationship">情感信息</string>
    <string name="Education">学校</string>
    <string name="WorkPosition">行业/职位</string>
    <string name="Select">请选择</string>
    <string name="CityName">输入城市名称</string>
    <string name="PopularRegions">热门国家</string>
    <string name="China">国内</string>
    <string name="International">国际</string>
    <string name="EditInfo">编辑资料</string>
    <string name="PassionsSports">喜欢的运动</string>
    <string name="PassionsMusic">喜欢的音乐</string>
    <string name="PassionsFoodie">喜欢的食物</string>
    <string name="PassionsMovies">喜欢的电影</string>
    <string name="PassionsReading">喜欢的书和动漫</string>
    <string name="EmotionalState">情感状态</string>
    <string name="socialConcat">社交偏好</string>
    <string name="Purposes">交友目的</string>
    <string name="WhoLikesMe">谁喜欢我</string>
    <string name="Today">今天</string>
    <string name="Yesterday">昨天</string>
    <string name="Follower">粉丝</string>
    <string name="Settings">基础设置</string>
    <string name="ClearCache">清除缓存</string>
    <string name="PushNotifications">消息推送</string>
    <string name="Privacy">隐私设置</string>
    <string name="Language">语言切换</string>
    <string name="Cancel">取消</string>
    <string name="OK">确定</string>
    <string name="Save">保存</string>
    <string name="Copy">复制</string>
    <string name="Hint">提示</string>
</resources>