<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:background="@drawable/button_white"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:id="@+id/clipboardTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/Copy"
        android:textColor="#ff02091a"
        android:textSize="18sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/recallMessageTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/Withdrawal"
        android:textColor="#ff02091a"
        android:textSize="18sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/zhuanfaTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/Forward"
        android:textColor="#ff02091a"
        android:textSize="18sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/saveTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/Save"
        android:textColor="#ff02091a"
        android:textSize="18sp"
        android:visibility="gone"/>

</LinearLayout>