<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_dialog"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@mipmap/like_bg" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="38dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SuperLikes"
                    android:textStyle="bold"
                    android:textColor="#ff02091a"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/superFocusTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="还剩0次"
                        android:textColor="#ff848b99"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/superLoveTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="@string/SeeHowToDeal"
                        android:textColor="#ff697cf1"
                        android:textSize="12sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/SendPrivateMessage"
                    android:textColor="#ff848b99"
                    android:textSize="12sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="12dp"
                android:layout_marginRight="21dp"
                android:src="@mipmap/like" />

        </RelativeLayout>


        <EditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_stroke_gray"
            android:gravity="center_vertical"
            android:hint="@string/Greetings"
            android:lineSpacingExtra="2dp"
            android:maxLength="15"
            android:minHeight="68dp"
            android:padding="12dp"
            android:textColor="#343944"
            android:textColorHint="#ff848b99"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EEEEEE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/tv_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Cancel"
                android:textColor="#848B99"
                android:textSize="18sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#EEEEEE" />

            <TextView
                android:id="@+id/tv_right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Send"
                android:textColor="#ff02091a"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>