<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_dialog"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="你想找什么样的人聊天？"
                android:textColor="#ff02091a"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/radio_button_sex_2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/woman"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:textColor="#343944"
                    android:textSize="@dimen/sp_16" />


                <RadioButton
                    android:id="@+id/radio_button_sex_1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/man"
                    android:button="@null"
                    android:gravity="center"
                    android:textColor="#343944"
                    android:textSize="@dimen/sp_16" />


                <RadioButton
                    android:id="@+id/radio_button_sex_0"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/sexgroup"
                    android:button="@null"
                    android:gravity="center"
                    android:textColor="#343944"
                    android:textSize="@dimen/sp_16" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="56dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Woman"
                    android:textColor="#ff343944"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:text="@string/Man"
                    android:textColor="#ff343944"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/AllGood"
                    android:textColor="#ff343944"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/confirmView"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="-24dp"
            android:layout_marginRight="26dp"
            android:background="@drawable/button_confirm"
            android:gravity="center"
            android:text="@string/OK"
            android:textColor="#ffffffff"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

</LinearLayout>